--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wangpos.kotlin_s_mvp.ui.MainActivity">
+    tools:context="com.wangpos.kotlin_s_mvp.ui.WelcomeActivity">
+
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-  />
+        android:id="@+id/tvHeader"
+        android:layout_width="match_parent"
+        android:text="aaaa"
+        android:textColor=""
+        android:layout_height="100dp" />
 
 </LinearLayout>
